src/objects/Apttus_Config2__PriceRule__c.object
<CustomObject>
    <description>Represents a single rule in a price ruleset</description>
    <fields>
        <fullName>Apttus_Config2__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates whether the rule is active</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AdjustmentAppliesTo__c</fullName>
        <description>Indicates the price field the adjustment should be applied to. Not applicable to price override adjustments.</description>
        <inlineHelpText>Value of this field controls which price point the adjustments are applied to. For example, whether the price discounts are applied to the list price, or net price.</inlineHelpText>
        <label>Adjustment Applies To</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Base Price</fullName>
                    <default>true</default>
                    <label>Base Price</label>
                </value>
                <value>
                    <fullName>List Price</fullName>
                </value>
                <value>
                    <fullName>Base Extended Price</fullName>
                </value>
                <value>
                    <fullName>Extended Price</fullName>
                </value>
                <value>
                    <fullName>Custom Price Point</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AdjustmentChargeType__c</fullName>
        <description>The adjustment charge type. Used to create Aggregate line items.</description>
        <label>Adjustment Charge Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Adjustment</fullName>
                    <default>true</default>
                    <label>Adjustment</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AllowRemovalOfAdjustment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether user is allowed to remove the aggregate  adjustment</description>
        <label>Allow Removal Of Adjustment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AllowableAction__c</fullName>
        <description>The action allowed for the end user</description>
        <label>Allowable Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unrestricted</fullName>
                    <default>true</default>
                    <label>Unrestricted</label>
                </value>
                <value>
                    <fullName>Adjust Upwards</fullName>
                </value>
                <value>
                    <fullName>Adjust Downwards</fullName>
                </value>
                <value>
                    <fullName>No Adjustments</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ApplicationMethod__c</fullName>
        <description>The rule application method. This field is deprecated. The Application method is moved to the Price Ruleset..</description>
        <label>Application Method (Deprecated)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Aggregate</fullName>
                </value>
                <value>
                    <fullName>Allocate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BeneficiaryId__c</fullName>
        <description>ID of the beneficiary associated with the benefit</description>
        <externalId>true</externalId>
        <inlineHelpText>ID of the beneficiary associated with the benefit</inlineHelpText>
        <label>Beneficiary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BeneficiaryType__c</fullName>
        <description>The beneficiary type</description>
        <inlineHelpText>The beneficiary type</inlineHelpText>
        <label>Beneficiary Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                    <default>true</default>
                    <label>Account</label>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
                <value>
                    <fullName>User</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BenefitType__c</fullName>
        <description>The rule benefit type</description>
        <inlineHelpText>The rule benefit type</inlineHelpText>
        <label>Benefit Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Price Only</fullName>
                    <default>true</default>
                    <label>Price Only</label>
                </value>
                <value>
                    <fullName>Price and Quantity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ChargeTypeCriteriaOper__c</fullName>
        <description>The charge type criteria operator</description>
        <inlineHelpText>The charge type criteria operator</inlineHelpText>
        <label>Charge Type Criteria Oper</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>in</fullName>
                </value>
                <value>
                    <fullName>not in</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ChargeTypeCriteria__c</fullName>
        <description>One or more charge type inclusion/exclusion criteria</description>
        <inlineHelpText>One or more charge type inclusion/exclusion criteria</inlineHelpText>
        <label>Charge Type Criteria</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CountryCriteriaOper__c</fullName>
        <description>The country criteria operator</description>
        <inlineHelpText>The country criteria operator</inlineHelpText>
        <label>Country Criteria Oper</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>in</fullName>
                </value>
                <value>
                    <fullName>not in</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CountryCriteria__c</fullName>
        <description>One or more country inclusion/exclusion criteria</description>
        <inlineHelpText>One or more country inclusion/exclusion criteria</inlineHelpText>
        <label>Country Criteria</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Criteria__c</fullName>
        <description>The rule criteria specification</description>
        <inlineHelpText>The rule criteria specification</inlineHelpText>
        <label>Rule Criteria</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CustomPricePointSource__c</fullName>
        <description>Indicates the source field in the business object which holds the custom price point value</description>
        <inlineHelpText>Indicates the source field in the business object which holds the custom price point value</inlineHelpText>
        <label>Custom Price Point Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Description__c</fullName>
        <description>The description for the rule</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Dimension1Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the first dimension. Only applicable to Dimension rules.</description>
        <label>Dimension 1</label>
        <referenceTo>Apttus_Config2__PriceDimension__c</referenceTo>
        <relationshipLabel>Price Rules (Dimension 1)</relationshipLabel>
        <relationshipName>PriceRules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Dimension1ValueType__c</fullName>
        <description>The value type of the first dimension. Only applicable to Dimension rules.</description>
        <label>Dimension 1 Value Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Discrete</fullName>
                </value>
                <value>
                    <fullName>Range</fullName>
                </value>
                <value>
                    <fullName>Weighted Range</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Dimension2Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the second dimension. Only applicable to Dimension rules.</description>
        <label>Dimension 2</label>
        <referenceTo>Apttus_Config2__PriceDimension__c</referenceTo>
        <relationshipLabel>Price Rules (Dimension 2)</relationshipLabel>
        <relationshipName>PriceRules2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Dimension2ValueType__c</fullName>
        <description>The value type of the second dimension. Only applicable to Dimension rules.</description>
        <label>Dimension 2 Value Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Discrete</fullName>
                </value>
                <value>
                    <fullName>Range</fullName>
                </value>
                <value>
                    <fullName>Weighted Range</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Dimension3Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the third dimension. Only applicable to Dimension rules.</description>
        <label>Dimension 3</label>
        <referenceTo>Apttus_Config2__PriceDimension__c</referenceTo>
        <relationshipLabel>Price Rules (Dimension 3)</relationshipLabel>
        <relationshipName>PriceRules3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Dimension3ValueType__c</fullName>
        <description>The value type of the third dimension. Only applicable to Dimension rules.</description>
        <label>Dimension 3 Value Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Discrete</fullName>
                </value>
                <value>
                    <fullName>Range</fullName>
                </value>
                <value>
                    <fullName>Weighted Range</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__EffectiveDate__c</fullName>
        <description>The rule or benefit effective date. The rule or benefit becomes effective on this date. It may also indicate the start date of a price ramp.</description>
        <inlineHelpText>The rule or benefit effective date. The rule or benefit becomes effective on this date. It may also indicate the start date of a price ramp.</inlineHelpText>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ExpirationDate__c</fullName>
        <description>The rule or benefit expiration date. The rule or benefit is no longer applicable after this date. It may also indicate the end date for a price ramp.</description>
        <inlineHelpText>The rule or benefit expiration date. The rule or benefit is no longer applicable after this date. It may also indicate the end date for a price ramp.</inlineHelpText>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ForEveryXCriteriaDimensionId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the For Every X Criteria Dimension</description>
        <inlineHelpText>ID of the For Every X Criteria Dimension</inlineHelpText>
        <label>For Every X Criteria Dimension</label>
        <referenceTo>Apttus_Config2__PriceDimension__c</referenceTo>
        <relationshipLabel>Price Rules</relationshipLabel>
        <relationshipName>PriceRulesForEveryX</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ForEveryXCriteriaDimensionType__c</fullName>
        <description>The type associated with the For Every X criteria dimension</description>
        <inlineHelpText>The type associated with the For Every X criteria dimension</inlineHelpText>
        <label>For Every X Criteria Dimension Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Quantity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ForEveryXCriteriaDimensionValue__c</fullName>
        <description>The For Every X Criteria dimension value</description>
        <inlineHelpText>The For Every X Criteria dimension value</inlineHelpText>
        <label>For Every X Criteria Dimension Value</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__FutureBenefitValidityOffset__c</fullName>
        <description>The offset to establish the validity period of a future benefit. Only applicable to incentive rules.</description>
        <inlineHelpText>The offset to establish the validity period of a future benefit. Only applicable to incentive rules.</inlineHelpText>
        <label>Future Benefit Validity Offset</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__FutureBenefitValidityType__c</fullName>
        <description>Establishes the validity period of a future benefit. Only applicable to incentive rules.</description>
        <inlineHelpText>Establishes the validity period of a future benefit. Only applicable to incentive rules.</inlineHelpText>
        <label>Future Benefit Validity Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Incentive End Date</fullName>
                </value>
                <value>
                    <fullName>Within X Days</fullName>
                </value>
                <value>
                    <fullName>Within X Months</fullName>
                </value>
                <value>
                    <fullName>Within Calendar Month</fullName>
                </value>
                <value>
                    <fullName>Within Calendar Quarter</fullName>
                </value>
                <value>
                    <fullName>Within Calendar Year</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__InitialRows__c</fullName>
        <defaultValue>5</defaultValue>
        <description>The number of initial entries in the rule</description>
        <label>Initial Rows</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__MetricValueSource__c</fullName>
        <description>The data source which provides the value for the rate table metric.</description>
        <inlineHelpText>Fields from the transaction records that represent volume or revenue 
1.	VOLUME:  Generally represented by the standard field “Quantity” 
2.	REVENUE: Generally represented by the standard field “Net Price”.  However,  can also use other fields</inlineHelpText>
        <label>Metric Value Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__MilestoneCriteriaOper__c</fullName>
        <description>The milestone criteria operator</description>
        <inlineHelpText>The milestone criteria operator</inlineHelpText>
        <label>Milestone Criteria Oper</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>in</fullName>
                </value>
                <value>
                    <fullName>not in</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__MilestoneCriteria__c</fullName>
        <description>One or more milestone inclusion/exclusion criteria</description>
        <inlineHelpText>One or more milestone inclusion/exclusion criteria</inlineHelpText>
        <label>Milestone Criteria</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__MilestoneStatusCriteriaOper__c</fullName>
        <description>The milestone status criteria operator</description>
        <inlineHelpText>The milestone status criteria operator</inlineHelpText>
        <label>Milestone Status Criteria Oper</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>in</fullName>
                </value>
                <value>
                    <fullName>not in</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__MilestoneStatusCriteria__c</fullName>
        <description>One or more milestone status inclusion/exclusion criteria</description>
        <inlineHelpText>One or more milestone status inclusion/exclusion criteria</inlineHelpText>
        <label>Milestone Status Criteria</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__NumberOfEntries__c</fullName>
        <description>Indicates the number of entries associated with the price rule</description>
        <label>Number Of Entries</label>
        <summaryForeignKey>Apttus_Config2__PriceRuleEntry__c.Apttus_Config2__PriceRuleId__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PriceListCriteriaOper__c</fullName>
        <description>The price list criteria operator</description>
        <inlineHelpText>The price list criteria operator</inlineHelpText>
        <label>Price List Criteria Oper</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>in</fullName>
                </value>
                <value>
                    <fullName>not in</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PriceListCriteria__c</fullName>
        <description>One or more price list inclusion/exclusion criteria</description>
        <inlineHelpText>One or more price list inclusion/exclusion criteria</inlineHelpText>
        <label>Price List Criteria</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductCriteriaOper__c</fullName>
        <description>The product criteria operator</description>
        <inlineHelpText>The product criteria operator</inlineHelpText>
        <label>Product Criteria Oper</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>in</fullName>
                </value>
                <value>
                    <fullName>not in</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductCriteria__c</fullName>
        <description>One or more product inclusion/exclusion criteria</description>
        <inlineHelpText>One or more product inclusion/exclusion criteria</inlineHelpText>
        <label>Product Criteria</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductFamilyCriteriaOper__c</fullName>
        <description>The product family criteria operator</description>
        <inlineHelpText>The product family criteria operator</inlineHelpText>
        <label>Product Family Criteria Oper</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>in</fullName>
                </value>
                <value>
                    <fullName>not in</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductFamilyCriteria__c</fullName>
        <description>One or more product family inclusion/exclusion criteria</description>
        <inlineHelpText>One or more product family inclusion/exclusion criteria</inlineHelpText>
        <label>Product Family Criteria</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductGroupCriteriaOper__c</fullName>
        <description>The product group criteria operator</description>
        <inlineHelpText>The product group criteria operator</inlineHelpText>
        <label>Product Group Criteria Oper</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>in</fullName>
                </value>
                <value>
                    <fullName>not in</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductGroupCriteria__c</fullName>
        <description>One or more product group inclusion/exclusion criteria</description>
        <inlineHelpText>One or more product group inclusion/exclusion criteria</inlineHelpText>
        <label>Product Group Criteria</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RegionCriteriaOper__c</fullName>
        <description>The region criteria operator</description>
        <inlineHelpText>The region criteria operator</inlineHelpText>
        <label>Region Criteria Oper</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>in</fullName>
                </value>
                <value>
                    <fullName>not in</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RegionCriteria__c</fullName>
        <description>One or more region inclusion/exclusion criteria</description>
        <inlineHelpText>One or more region inclusion/exclusion criteria</inlineHelpText>
        <label>Region Criteria</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RuleSubType__c</fullName>
        <description>The rule subtype</description>
        <inlineHelpText>The rule subtype</inlineHelpText>
        <label>Rule Sub Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Benefit</fullName>
                </value>
                <value>
                    <fullName>Deduction</fullName>
                </value>
                <value>
                    <fullName>Point Accrual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RuleType__c</fullName>
        <description>The rule type</description>
        <inlineHelpText>1. SINGLE RATE:  Same rate for all qualified txns.
2. RATE TABLE- NO TIERS:  Different rates based on discrete values e.g. Asia  – $5 | EMEA - $10
3. RATE TABLE - WITH TIERS: Different rate based on volume or revenue tiers - 1-100 - $5, 101-1000 - $10</inlineHelpText>
        <label>Rule Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Dimension</fullName>
                </value>
                <value>
                    <fullName>Condition</fullName>
                </value>
                <value>
                    <fullName>Single Rate</fullName>
                </value>
                <value>
                    <fullName>Rate Table - No Tiers</fullName>
                </value>
                <value>
                    <fullName>Rate Table - With Tiers</fullName>
                </value>
                <value>
                    <fullName>Volume</fullName>
                </value>
                <value>
                    <fullName>Inclusion</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RulesetId__c</fullName>
        <description>ID of the associated rule set</description>
        <label>Ruleset</label>
        <referenceTo>Apttus_Config2__PriceRuleset__c</referenceTo>
        <relationshipLabel>Rules</relationshipLabel>
        <relationshipName>Rules</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Sequence__c</fullName>
        <description>The rule evaluation sequence</description>
        <label>Sequence</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__StopProcessingMoreRules__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicator to prevent subsequent rules from processing</description>
        <label>Stop Processing More Rules</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__TierMetricRollupDuration__c</fullName>
        <description>Indicates the frequency for auto created rollup of the tiered metric value</description>
        <inlineHelpText>Period over which the tier metric is aggregated. No rollup means the tier metric is based on value from individual transaction only.</inlineHelpText>
        <label>Tier Metric Rollup Duration</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Rollup</fullName>
                    <default>true</default>
                    <label>No Rollup</label>
                </value>
                <value>
                    <fullName>Rebate Payout Period</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Half Yearly</fullName>
                </value>
                <value>
                    <fullName>Yearly</fullName>
                </value>
                <value>
                    <fullName>Incentive Period</fullName>
                </value>
                <value>
                    <fullName>Incentive Lifetime</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__TierMetricType__c</fullName>
        <description>The type of metric associated with rate table tiers</description>
        <inlineHelpText>The value of this field controls which metric to be used to qualify for tiers. &amp;#10;VOLUME: quantities are used to qualify for tiers. &amp;#10;REVENUE: order or invoice amount is used to qualify for tiers.</inlineHelpText>
        <label>Tier Metric Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Volume</fullName>
                </value>
                <value>
                    <fullName>Volume tiers with Dates</fullName>
                </value>
                <value>
                    <fullName>Revenue</fullName>
                </value>
                <value>
                    <fullName>Revenue tiers with Dates</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Price Rule</label>
    <nameField>
        <label>Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Price Rules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>